bump vm memory